--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
         <div class="logo">
             <img src="./assets/logo.svg" alt="Logo">
         </div>
+        <nav>
+         <ul>
+            <li>Features</li>
+            <li>About</li>
+            <li>Launch</li>
+            <li class="red">Sign Up</li>
+        </ul>   
+        <div class="hamburger">
+            <img src="./assets/icon-hamburger.svg" alt="Toggle" />
+          </div>
+        </nav>
     </header>
 </body>
 </html>
