press section added

--- a/index.html
+++ b/index.html
@@ -12,17 +12,61 @@
         <div class="logo">
             <img src="./assets/logo.svg" alt="Logo">
         </div>
-        <nav>
-         <ul>
+        <ul>
             <li>Features</li>
             <li>About</li>
             <li>Launch</li>
             <li class="red">Sign Up</li>
         </ul>   
         <div class="hamburger">
-            <img src="./assets/icon-hamburger.svg" alt="Toggle" />
+            <img src="./assets/41-415090_menu-icon-png-grey.png" alt="Toggle" />
           </div>
-        </nav>
-    </header>
+        </header>
+        <main>
+<section class="hero">
+<p class="pink-text">
+Launching soon
+</p>
+<h1>
+    An NFT like no other
+</h1>
+<p class="grey-text">
+Don't miss out on the release of our new NFT. Sigh up below to receive updates when we go live.
+</p>
+<button>Sign up</button>
+<img src="./assets/graphic.png" alt="graphic">
+</section>
+<section class="upsell">
+    <div class="upsell-text"><h1>
+        Free NFT for early birds
+    </h1>
+    <p>
+        Sigh up today and you'll get a free NFT when we launch
+    </p>
+</div>
+</section>
+<section class="press">
+    <div class="press-logos">
+        <img src="./assets/companies/1.svg" alt="Boomerang">
+    </div>
+    <div class="press-logos">
+        <img src="./assets/companies/2.svg" alt="Blimp">
+    </div>
+    <div class="press-logos">
+        <img src="./assets/companies/3.svg" alt="qrco">
+    </div>
+    <div class="press-logos">
+        <img src="./assets/companies/4.svg" alt="OpenDoor">
+    </div>
+    <div class="press-logos">
+        <img src="./assets/companies/5.svg" alt="Droplet">
+    </div>
+</section>
+<section class="showcase"></section>
+<section class="footer-upsell"></section>
+        </main>
+        <footer>
+
+        </footer>
 </body>
 </html>
