Main part mostly finished

--- a/index.html
+++ b/index.html
@@ -46,24 +46,90 @@ Don't miss out on the release of our new NFT. Sigh up below to receive updates w
 </div>
 </section>
 <section class="press">
-    <div class="press-logos">
+    <div class="press-logos boomerang">
         <img src="./assets/companies/1.svg" alt="Boomerang">
     </div>
-    <div class="press-logos">
+    <div class="press-logos blimp">
         <img src="./assets/companies/2.svg" alt="Blimp">
     </div>
-    <div class="press-logos">
+    <div class="press-logos qrco">
         <img src="./assets/companies/3.svg" alt="qrco">
     </div>
-    <div class="press-logos">
+    <div class="press-logos opendoor">
         <img src="./assets/companies/4.svg" alt="OpenDoor">
     </div>
-    <div class="press-logos">
+    <div class="press-logos droplet">
         <img src="./assets/companies/5.svg" alt="Droplet">
     </div>
 </section>
-<section class="showcase"></section>
-<section class="footer-upsell"></section>
+<section class="showcase">
+    <h1>
+LE super rare auction
+    </h1>
+    <p class="grey-text">
+We have released four limited edition NFTs early which can be bid on via <a href="#">OpenSea</a>.
+    </p>
+    <div class="showcase-cards">
+     <div class="card Purpleman">
+        <div class="image"><img src="./assets/ntfs/ntf-1.svg" alt="Purple man"></div>
+        <div class="price-tag">
+            <div class="gloop small-font">GLOOP SERIES</div>
+            <div class="small-font greytext">TOP BID</div>
+            <div class="boldtext">Purple Man</div>
+            <div class="price boldtext"><img class="inline" src="./assets/eth.svg" alt="eth"> 2.99 ETH</div>
+            <div class="greytext">#12983</div>
+            <div class="greytext">1 day left</div>
+        </div>
+    </div>
+    <div class="card Beige">
+        <div class="image"><img src="./assets/ntfs/nft-2.svg" alt="Beige"></div>
+        <div class="price-tag">
+            <div class="gloop small-font">GLOOP SERIES</div>
+            <div class="small-font greytext">TOP BID</div>
+            <div class="boldtext">     Beige</div> 
+            <div class="price boldtext"><img class="inline" src="./assets/eth.svg" alt="eth"> 2.99 ETH</div>
+            <div class="greytext">#12983</div>
+            <div class="greytext">1 day left</div>
+    </div>
+</div>
+    <div class="card Redman">
+        <div class="image"><img src="./assets/ntfs/ntf-3.svg" alt="Red man"></div>
+        <div class="price-tag">
+            <div class="gloop small-font">GLOOP SERIES</div>
+            <div class="small-font greytext">TOP BID</div>
+            <div class="boldtext">Red Man</div>
+            <div class="price boldtext"><img class="inline" src="./assets/eth.svg" alt="eth"> 2.99 ETH</div>
+            <div class="greytext">#12983</div>
+            <div class="greytext">1 day left</div>
+    </div>
+</div>
+    <div class="card Green">
+        <div class="image"><img src="./assets/ntfs/ntf-4.svg" alt="Green"></div>
+        <div class="price-tag">
+            <div class="gloop small-font">GLOOP SERIES</div>
+            <div class="small-font greytext">TOP BID</div>
+            <div class="boldtext">Green</div>
+            <div class="price boldtext"><img class="inline" src="./assets/eth.svg" alt="eth"> 2.99 ETH</div>
+            <div class="greytext">#12983</div>
+            <div class="greytext">1 day left</div>
+        </div>
+    </div>   
+    </div>
+</section>
+<section class="footer-upsell">
+    <p class="pink-text">
+        Launching soon
+        </p>
+        <h1>
+            An NFT like no other
+        </h1>
+        <p class="grey-text">
+        Don't miss out on the release of our new NFT. Sigh up below to receive updates when we go live.
+        </p>
+        <button>Sign up</button>
+        <img src="./assets/upsell-footer-image.svg" alt="graphic">
+        </section>
+</section>
         </main>
         <footer>
 
