Footer-partly-finished

--- a/index.html
+++ b/index.html
@@ -128,11 +128,69 @@ We have released four limited edition NFTs early which can be bid on via <a href
         </p>
         <button>Sign up</button>
         <img src="./assets/upsell-footer-image.svg" alt="graphic">
-        </section>
+        
 </section>
         </main>
         <footer>
-
+            <div class="social">
+                  <div class="logo">
+                    <img src="./assets/logo.svg" alt="Logo"/>
+                    <div class="exclusive">Exclusive NFT Collection</div>
+                  </div>
+                  <ul class="icons">
+                    <li>
+                      <a href="#"><img src="./assets/icon-facebook.svg" alt="Facebook"/></a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <img src="./assets/icon-twitter.svg" alt="Twitter"/></a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <img src="./assets/icon-instagram.svg" alt="Instagram"/></a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <img src="./assets/icon-pinterest.svg" alt="Pinterest"/></a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="links">
+                    <div class="column 1">
+                      <h4>ABOUT</h4>
+                      <ul>
+                        <li>About</li>
+                        <li>Terms</li>
+                        <li>Legal</li>
+                        </ul>
+                    </div>
+                    <div class="column 2">
+                      <h4>NFT</h4>
+                      <ul>
+                        <li>OpenSea</li>
+                        <li>Maker</li>
+                        <li>Learn</li>
+                      </ul>
+                    </div>
+                    <div class="column 3">
+                      <h4>CONTACT</h4>
+                      <ul>
+                        <li>Press</li>
+                        <li>Support</li>
+                     </ul>
+                    </div>
+                    <div class="column 4">
+                      <h4>SOCIAL</h4>
+                      <ul>
+                        <li>Twitter/li>
+                        <li>Instagram</li>
+                    </ul>
+                    </div>
+                <div class="bottom-line">
+                    <p class="greytext">Copyright 2022 NFTlanding</p>
+                    <p class="greytext launching">Launching August 2022</p>
+                </div>
+                
         </footer>
 </body>
 </html>
