--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@ We have released four limited edition NFTs early which can be bid on via <a href
 </section>
         </main>
         <footer>
-            <div class="social">
+            <div class="social-links">
+             <div class="social">
                   <div class="logo">
                     <img src="./assets/logo.svg" alt="Logo"/>
                     <div class="exclusive">Exclusive NFT Collection</div>
@@ -182,15 +183,16 @@ We have released four limited edition NFTs early which can be bid on via <a href
                     <div class="column 4">
                       <h4>SOCIAL</h4>
                       <ul>
-                        <li>Twitter/li>
+                        <li>Twitter</li>
                         <li>Instagram</li>
                     </ul>
-                    </div>
-                <div class="bottom-line">
-                    <p class="greytext">Copyright 2022 NFTlanding</p>
-                    <p class="greytext launching">Launching August 2022</p>
-                </div>
-                
+                    </div>   
+            </div>
+                               
         </footer>
+        <div class="bottom-line">
+            <p class="greytext">Copyright 2022 NFTlanding</p>
+            <p class="greytext launching">Launching August 2022</p>
+        </div>
 </body>
 </html>
